--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-tilt": "^1.0.2",
+    "react-toastify": "^10.0.6",
     "react-vertical-timeline-component": "^3.6.0"
   },
   "devDependencies": {
